--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
         }
 
         if ("serviceWorker" in navigator) {
-            navigator.serviceWorker.register("/service-worker.js");
+            navigator.serviceWorker.register("service-worker.js");
         }
     </script>
 </body>
