--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- PWA configuration -->
     <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#000000">
     
     <style>
         :root {
