--- a/index.html
+++ b/index.html
@@ -554,6 +554,7 @@
             width: 100%;
             border-collapse: collapse;
             font-size: var(--font-size-base);
+            table-layout: fixed;
         }
 
         .cards-table th {
