--- a/index.html
+++ b/index.html
@@ -603,6 +603,11 @@
             border-bottom: none;
         }
 
+        .table-container{
+            scrollbar-color: auto;   /* thumb & track colours = system default */
+            scrollbar-width: auto;   /* normal thickness                       */
+        }
+
         /* Table responsive */
         @media (max-width: 600px) {
             .modal-overlay {
