--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Status bar theming for mobile devices - Light mode only -->
     <meta name="theme-color" content="#fcfcf9">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     
     <!-- iOS Safari status bar styling - Light mode only -->
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
