--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <table class="cards-table" id="cardsTable">
                         <thead>
                             <tr>
+                                <th>Select</th>
                                 <th>English</th>
                                 <th>Hindi</th>
                             </tr>
@@ -72,6 +73,10 @@
                         <tbody id="cardsTableBody">
                         </tbody>
                     </table>
+                </div>
+                <div class="table-actions">
+                    <button id="selectAllButton" type="button" class="view-all-button">Select All</button>
+                    <button id="deselectAllButton" type="button" class="view-all-button">Deselect All</button>
                 </div>
             </div>
         </div>
