--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <div class="app-container">
         <header class="header">
-            <h1 class="app-title">Flashcards</h1>
+            <h1 class="app-title">FlashCards</h1>
             <div class="header-controls">
                 <select class="category-selector" id="categorySelector">
                     <option value="">Select a category...</option>
